Adding header, footer, cosmetics
fixed bugs as well

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>dijkstra's algorithm</h1>
+        <h2>maguire mcmahon</h2>
+    </header>
     <div class="game">
         <div class="buttons">
             <button class="reset">Reset</button>
@@ -16,6 +20,13 @@
         </div>
         <h2 class="description"></h2>
     </div>
+    <footer>
+        <div class="buttons">
+            <a href="http://github.com/mimcmahon20" target="_blank" class="github"><button>GitHub</button></a>
+            <a href="http://linkedin.com/in/maguire-mcmahon" target="_blank" class="linked"><button>LinkedIn</button></a>
+            <a href="https://docs.google.com/document/d/11AT2ASO3BLljY9GCj5ToH2JpKHkwZlYfumNWe4sU8L8/edit?usp=sharing" target="_blank" class="resume"><button>Resume</button></a>
+        </div>
+    </footer>
 </body>
 <script src="mainscript.js"></script>
 </html>
